--- a/index.html
+++ b/index.html
@@ -409,26 +409,39 @@
             const headerRow = document.getElementById('tableHeaderRow');
             const currentSubject = appData.subjects.find(s => s.id === appData.currentSubjectId);
             if (!currentSubject) return;
-            headerRow.innerHTML = `<th class="p-4 rounded-tl-xl w-16 text-center">#</th><th class="p-4 text-left min-w-[200px]">Student Name</th>${currentSubject.assignments.map(a => `<th class="p-2 text-center w-24 group relative"><div class="flex flex-col items-center"><span class="font-bold text-slate-700 dark:text-slate-200">${a.title}</span><span class="text-[10px] font-normal text-slate-400 max-w-[80px] truncate">${a.desc}</span></div><div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 px-2 py-1 bg-slate-800 text-white text-xs rounded opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none whitespace-nowrap z-10">${a.desc}</div></th>`).join('')}<th class="p-4 rounded-tr-xl w-32 text-left">Status</th><th class="p-4 w-16"></th>`;
+
+            // Sticky Header for Name
+            headerRow.innerHTML = `<th class="p-4 rounded-tl-xl w-16 text-center bg-gray-50/50 dark:bg-[#09090b] z-20">#</th><th class="p-4 text-left min-w-[200px] sticky left-0 bg-gray-50 dark:bg-[#09090b] z-20 shadow-[2px_0_5px_-2px_rgba(0,0,0,0.1)]">Student Name</th>${currentSubject.assignments.map(a => `<th class="p-2 text-center w-24 group relative"><div class="flex flex-col items-center"><span class="font-bold text-slate-700 dark:text-slate-200">${a.title}</span><span class="text-[10px] font-normal text-slate-400 max-w-[80px] truncate">${a.desc}</span></div><div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 px-2 py-1 bg-slate-800 text-white text-xs rounded opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none whitespace-nowrap z-10">${a.desc}</div></th>`).join('')}<th class="p-4 rounded-tr-xl w-32 text-left">Status</th><th class="p-4 w-16"></th>`;
+
             const searchTerm = document.getElementById('searchInput')?.value.trim().toLowerCase() || '';
             const sortOption = document.getElementById('sortSelect')?.value || 'default';
             let filteredStudents = appData.students.filter(s => s.name.toLowerCase().includes(searchTerm));
             if (sortOption === 'most_missing') filteredStudents.sort((a, b) => { const mA = a.missing.filter(m => currentSubject.assignments.some(assign => assign.id === m)).length; const mB = b.missing.filter(m => currentSubject.assignments.some(assign => assign.id === m)).length; return mB - mA; });
             else if (sortOption === 'least_missing') filteredStudents.sort((a, b) => { const mA = a.missing.filter(m => currentSubject.assignments.some(assign => assign.id === m)).length; const mB = b.missing.filter(m => currentSubject.assignments.some(assign => assign.id === m)).length; return mA - mB; });
             else filteredStudents.sort((a, b) => a.id - b.id);
+
             const completeCount = filteredStudents.filter(s => s.missing.filter(m => currentSubject.assignments.some(a => a.id === m)).length === 0).length;
             document.getElementById('countComplete').innerText = completeCount;
             document.getElementById('countIncomplete').innerText = filteredStudents.length - completeCount;
+
             if (filteredStudents.length === 0) { tbody.innerHTML = `<tr><td colspan="${currentSubject.assignments.length + 4}" class="p-12 text-center text-slate-400 italic">No students found</td></tr>`; return; }
+
             tbody.innerHTML = filteredStudents.map((s, index) => {
                 const totalAssignments = currentSubject.assignments.length;
                 const missingCount = s.missing.filter(m => currentSubject.assignments.some(a => a.id === m)).length;
                 const completedCount = totalAssignments - missingCount;
                 const progressPercent = totalAssignments === 0 ? 0 : (completedCount / totalAssignments) * 100;
                 const isComplete = missingCount === 0;
+
+                // Sticky Column for Name Row
                 return `<tr class="border-b border-gray-100 dark:border-white/5 hover:bg-gray-50/50 dark:hover:bg-white/5 transition-colors group">
-                    <td class="p-4 text-center text-slate-400 font-mono text-xs">${index + 1}</td>
-                    <td class="p-4"><div class="font-bold text-slate-700 dark:text-slate-200">${s.name}</div><div class="w-full bg-gray-100 dark:bg-white/10 rounded-full h-1.5 mt-2 overflow-hidden"><div class="bg-gold-500 h-1.5 rounded-full transition-all duration-500" style="width: ${progressPercent}%"></div></div></td>
+                    <td class="p-4 text-center text-slate-400 font-mono text-xs bg-white dark:bg-[#09090b] group-hover:bg-gray-50 dark:group-hover:bg-white/5 transition-colors">${index + 1}</td>
+                    <td class="p-4 sticky left-0 bg-white dark:bg-[#09090b] group-hover:bg-gray-50 dark:group-hover:bg-white/5 transition-colors z-10 shadow-[2px_0_5px_-2px_rgba(0,0,0,0.1)]">
+                        <div class="font-bold text-slate-700 dark:text-slate-200">${s.name}</div>
+                        <div class="w-full bg-gray-100 dark:bg-white/10 rounded-full h-1.5 mt-2 overflow-hidden">
+                            <div class="bg-gold-500 h-1.5 rounded-full transition-all duration-500" style="width: ${progressPercent}%"></div>
+                        </div>
+                    </td>
                     ${currentSubject.assignments.map(a => `<td class="p-2 text-center border-l border-gray-100 dark:border-white/5"><label class="cursor-pointer relative flex justify-center items-center h-full w-full checkbox-wrapper"><input type="checkbox" ${!s.missing.includes(a.id) ? 'checked' : ''} onchange="toggleMissing(${s.id}, '${a.id}')" class="peer sr-only"><div class="w-6 h-6 rounded-lg border-2 border-gray-200 dark:border-gray-600 peer-checked:bg-gold-500 peer-checked:border-gold-500 transition-all flex items-center justify-center text-white transform peer-checked:scale-110"><i data-lucide="check" class="w-4 h-4"></i></div></label></td>`).join('')}
                     <td class="p-4">${isComplete ? '<span class="inline-flex items-center gap-1 px-2.5 py-1 rounded-lg bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-xs font-bold border border-emerald-100 dark:border-emerald-900/30"><i data-lucide="check-circle-2" class="w-3 h-3"></i> Complete</span>' : `<span class="inline-flex items-center gap-1 px-2.5 py-1 rounded-lg bg-rose-50 dark:bg-rose-900/20 text-rose-600 dark:text-rose-400 text-xs font-bold border border-rose-100 dark:border-rose-900/30"><i data-lucide="alert-circle" class="w-3 h-3"></i> Missing ${missingCount}</span>`}</td>
                     <td class="p-4 text-right flex items-center justify-end gap-2"><button onclick="markAllComplete(${s.id})" class="text-slate-300 hover:text-gold-500 transition-colors opacity-0 group-hover:opacity-100 p-2 hover:bg-gold-50 dark:hover:bg-gold-900/20 rounded-lg"><i data-lucide="check-check" class="w-4 h-4"></i></button><button onclick="editStudent(${s.id})" class="text-slate-300 hover:text-amber-500 transition-colors opacity-0 group-hover:opacity-100 p-2 hover:bg-amber-50 dark:hover:bg-amber-900/20 rounded-lg"><i data-lucide="pencil" class="w-4 h-4"></i></button><button onclick="removeStudent(${s.id})" class="text-slate-300 hover:text-rose-500 transition-colors opacity-0 group-hover:opacity-100 p-2 hover:bg-rose-50 dark:hover:bg-rose-900/20 rounded-lg"><i data-lucide="trash-2" class="w-4 h-4"></i></button></td></tr>`;
@@ -448,6 +461,7 @@
             const searchTerm = document.getElementById('searchInput')?.value.trim().toLowerCase() || '';
             let filteredStudents = appData.students.filter(s => s.name.toLowerCase().includes(searchTerm));
             if (filteredStudents.length === 0) { container.innerHTML = `<div class="text-center text-slate-400 py-8 italic">No students found</div>`; return; }
+
             container.innerHTML = filteredStudents.map(s => {
                 const totalAssignments = currentSubject.assignments.length;
                 const missingCount = s.missing.filter(m => currentSubject.assignments.some(a => a.id === m)).length;
@@ -455,7 +469,46 @@
                 const progressPercent = totalAssignments === 0 ? 0 : (completedCount / totalAssignments) * 100;
                 const isComplete = missingCount === 0;
                 const isExpanded = expandedStudentIds.has(s.id);
-                return `<div class="bg-white dark:bg-white/5 rounded-2xl border border-gray-200 dark:border-white/10 shadow-sm overflow-hidden"><div class="p-4 flex items-center justify-between cursor-pointer" onclick="toggleCard(${s.id})"><div class="flex items-center gap-4"><div class="w-12 h-12 rounded-full flex items-center justify-center font-bold text-lg ${isComplete ? 'bg-emerald-50 text-emerald-600 dark:bg-emerald-900/20 dark:text-emerald-400' : 'bg-rose-50 text-rose-600 dark:bg-rose-900/20 dark:text-rose-400'}">${s.name.charAt(0)}</div><div><div class="font-bold text-slate-800 dark:text-slate-100 text-lg">${s.name}</div><div class="text-sm ${isComplete ? 'text-emerald-500' : 'text-rose-500'} font-medium flex items-center gap-1">${isComplete ? '<i data-lucide="check-circle-2" class="w-3 h-3"></i> Complete' : `<i data-lucide="alert-circle" class="w-3 h-3"></i> Missing ${missingCount}`}</div></div></div><i data-lucide="chevron-down" id="chevron-${s.id}" class="w-6 h-6 text-slate-400 transition-transform ${isExpanded ? 'rotate-180' : ''}"></i></div><div id="card-content-${s.id}" class="${isExpanded ? '' : 'hidden'} border-t border-gray-100 dark:border-white/5 bg-gray-50/50 dark:bg-black/20"><div class="p-4 space-y-3">${currentSubject.assignments.map(a => `<div class="flex items-center justify-between p-3 bg-white dark:bg-white/5 rounded-xl border border-gray-100 dark:border-white/5"><div class="flex-1"><div class="text-sm font-bold text-slate-700 dark:text-slate-200">${a.title}</div><div class="text-xs text-slate-400">${a.desc}</div></div><label class="cursor-pointer checkbox-wrapper"><input type="checkbox" ${!s.missing.includes(a.id) ? 'checked' : ''} onchange="toggleMissing(${s.id}, '${a.id}')" class="peer sr-only"><div class="w-8 h-8 rounded-lg border-2 border-gray-200 dark:border-gray-600 peer-checked:bg-gold-500 peer-checked:border-gold-500 transition-all flex items-center justify-center text-white"><i data-lucide="check" class="w-5 h-5"></i></div></label></div>`).join('')}<div class="pt-3 flex justify-between items-center border-t border-gray-100 dark:border-white/5 mt-3"><button onclick="markAllComplete(${s.id})" class="text-emerald-600 text-sm font-bold flex items-center gap-1 px-3 py-2 rounded-lg hover:bg-emerald-50 dark:hover:bg-emerald-900/20"><i data-lucide="check-check" class="w-4 h-4"></i> Mark All</button><button onclick="editStudent(${s.id})" class="text-amber-500 text-sm font-bold flex items-center gap-1 px-3 py-2 rounded-lg hover:bg-amber-50 dark:hover:bg-amber-900/20"><i data-lucide="pencil" class="w-4 h-4"></i> Edit</button><button onclick="removeStudent(${s.id})" class="text-rose-500 text-sm font-bold flex items-center gap-1 px-3 py-2 rounded-lg hover:bg-rose-50 dark:hover:bg-rose-900/20"><i data-lucide="trash-2" class="w-4 h-4"></i> Delete</button></div></div></div></div>`;
+
+                // Grid Layout for Assignments
+                return `<div class="bg-white dark:bg-white/5 rounded-2xl border border-gray-200 dark:border-white/10 shadow-sm overflow-hidden">
+                    <div class="p-4 flex items-center justify-between cursor-pointer" onclick="toggleCard(${s.id})">
+                        <div class="flex items-center gap-4">
+                            <div class="w-12 h-12 rounded-full flex items-center justify-center font-bold text-lg ${isComplete ? 'bg-emerald-50 text-emerald-600 dark:bg-emerald-900/20 dark:text-emerald-400' : 'bg-rose-50 text-rose-600 dark:bg-rose-900/20 dark:text-rose-400'}">${s.name.charAt(0)}</div>
+                            <div>
+                                <div class="font-bold text-slate-800 dark:text-slate-100 text-lg">${s.name}</div>
+                                <div class="text-sm ${isComplete ? 'text-emerald-500' : 'text-rose-500'} font-medium flex items-center gap-1">
+                                    ${isComplete ? '<i data-lucide="check-circle-2" class="w-3 h-3"></i> Complete' : `<i data-lucide="alert-circle" class="w-3 h-3"></i> Missing ${missingCount}`}
+                                </div>
+                            </div>
+                        </div>
+                        <i data-lucide="chevron-down" id="chevron-${s.id}" class="w-6 h-6 text-slate-400 transition-transform ${isExpanded ? 'rotate-180' : ''}"></i>
+                    </div>
+                    <div id="card-content-${s.id}" class="${isExpanded ? '' : 'hidden'} border-t border-gray-100 dark:border-white/5 bg-gray-50/50 dark:bg-black/20">
+                        <div class="p-4">
+                            <div class="grid grid-cols-2 gap-3 mb-4">
+                                ${currentSubject.assignments.map(a => `
+                                    <div class="flex items-center justify-between p-3 bg-white dark:bg-white/5 rounded-xl border border-gray-100 dark:border-white/5 shadow-sm">
+                                        <div class="flex-1 min-w-0 mr-2">
+                                            <div class="text-sm font-bold text-slate-700 dark:text-slate-200 truncate">${a.title}</div>
+                                        </div>
+                                        <label class="cursor-pointer checkbox-wrapper flex-shrink-0">
+                                            <input type="checkbox" ${!s.missing.includes(a.id) ? 'checked' : ''} onchange="toggleMissing(${s.id}, '${a.id}')" class="peer sr-only">
+                                            <div class="w-8 h-8 rounded-lg border-2 border-gray-200 dark:border-gray-600 peer-checked:bg-gold-500 peer-checked:border-gold-500 transition-all flex items-center justify-center text-white">
+                                                <i data-lucide="check" class="w-5 h-5"></i>
+                                            </div>
+                                        </label>
+                                    </div>
+                                `).join('')}
+                            </div>
+                            <div class="pt-3 flex justify-between items-center border-t border-gray-100 dark:border-white/5">
+                                <button onclick="markAllComplete(${s.id})" class="text-emerald-600 text-sm font-bold flex items-center gap-1 px-3 py-2 rounded-lg hover:bg-emerald-50 dark:hover:bg-emerald-900/20"><i data-lucide="check-check" class="w-4 h-4"></i> Mark All</button>
+                                <button onclick="editStudent(${s.id})" class="text-amber-500 text-sm font-bold flex items-center gap-1 px-3 py-2 rounded-lg hover:bg-amber-50 dark:hover:bg-amber-900/20"><i data-lucide="pencil" class="w-4 h-4"></i> Edit</button>
+                                <button onclick="removeStudent(${s.id})" class="text-rose-500 text-sm font-bold flex items-center gap-1 px-3 py-2 rounded-lg hover:bg-rose-50 dark:hover:bg-rose-900/20"><i data-lucide="trash-2" class="w-4 h-4"></i> Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>`;
             }).join(''); lucide.createIcons();
         }
         function renderManageModal() {
