--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         }
 
         .dark .glass-panel {
-            background: rgba(20, 20, 23, 0.6);
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            background: rgba(10, 10, 12, 0.6);
+            backdrop-filter: blur(40px);
+            -webkit-backdrop-filter: blur(40px);
+            border: 1px solid rgba(255, 255, 255, 0.08);
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
         }
 
@@ -297,7 +299,7 @@
             </div>
         </div>
 
-        <div class="relative mx-[-16px] px-[16px] md:mx-0 md:px-0">
+        <div class="relative mx-[-16px] px-[16px] md:mx-0 md:px-0 z-30">
             <div class="flex overflow-x-auto gap-4 mb-8 scrollbar-hide no-print py-2 px-1" id="subjectTabs"></div>
         </div>
 
@@ -338,9 +340,15 @@
                     <option value="most_missing">Most Missing</option>
                     <option value="least_missing">Least Missing</option>
                 </select>
+                <button onclick="toggleStudentList()" id="toggleListBtn"
+                    class="px-4 py-4 rounded-2xl border border-gray-200 dark:border-white/10 bg-white/80 dark:bg-black/20 text-gray-600 dark:text-gray-300 hover:bg-white dark:hover:bg-white/10 transition-all shadow-sm"
+                    title="Show/Hide List">
+                    <i data-lucide="eye" class="w-6 h-6"></i>
+                </button>
             </div>
         </div>
-        <div class="glass-panel rounded-3xl overflow-hidden min-h-[400px] animate-enter shadow-2xl shadow-black/5"
+        <div id="studentListContainer"
+            class="glass-panel rounded-3xl overflow-hidden min-h-[400px] animate-enter shadow-2xl shadow-black/5 transition-all duration-500"
             style="animation-delay: 0.2s;">
             <div class="hidden md:block overflow-x-auto">
                 <table class="w-full text-left border-collapse" id="mainTable">
@@ -543,7 +551,7 @@
             const container = document.getElementById('subjectTabs');
             container.innerHTML = appData.subjects.map(sub => {
                 const isActive = sub.id === appData.currentSubjectId;
-                return `<button onclick="switchSubject('${sub.id}')" class="whitespace-nowrap px-6 py-3 rounded-2xl text-sm font-bold transition-all duration-300 ${isActive ? 'bg-gradient-to-r from-gold-500 to-gold-600 text-white shadow-lg shadow-gold-500/30 scale-105 ring-2 ring-gold-400/50' : 'bg-white dark:bg-white/5 text-gray-600 dark:text-gray-300 hover:bg-gray-50 dark:hover:bg-white/10 border border-gray-200 dark:border-white/10'}">${sub.name}</button>`;
+                return `<button onclick="switchSubject('${sub.id}')" class="whitespace-nowrap px-6 py-3 rounded-2xl text-sm font-bold transition-all duration-300 relative z-10 ${isActive ? 'bg-gradient-to-r from-gold-500 to-gold-600 text-white shadow-lg shadow-gold-500/30 scale-105 ring-2 ring-gold-400/50' : 'bg-white dark:bg-white/5 text-gray-600 dark:text-gray-300 hover:bg-gray-50 dark:hover:bg-white/10 border border-gray-200 dark:border-white/10'}">${sub.name}</button>`;
             }).join('');
         }
         function renderTable() {
@@ -651,6 +659,25 @@
             }
         }
         function switchSubject(id) { appData.currentSubjectId = id; saveData(); renderApp(); }
+
+        function toggleStudentList() {
+            const container = document.getElementById('studentListContainer');
+            const btn = document.getElementById('toggleListBtn');
+            const icon = btn.querySelector('i');
+
+            if (container.classList.contains('hidden')) {
+                container.classList.remove('hidden');
+                container.classList.add('animate-enter');
+                btn.classList.remove('bg-gold-50', 'text-gold-600', 'border-gold-200');
+                icon.setAttribute('data-lucide', 'eye');
+            } else {
+                container.classList.add('hidden');
+                container.classList.remove('animate-enter');
+                btn.classList.add('bg-gold-50', 'text-gold-600', 'border-gold-200');
+                icon.setAttribute('data-lucide', 'eye-off');
+            }
+            lucide.createIcons();
+        }
 
         // Manage Modal Functions
         function openManageModal() {
