--- a/index.html
+++ b/index.html
@@ -69,31 +69,13 @@
             background-image:
                 radial-gradient(at 0% 0%, rgba(184, 134, 28, 0.15) 0px, transparent 50%),
                 radial-gradient(at 100% 0%, rgba(99, 102, 241, 0.1) 0px, transparent 50%),
-                radial-gradient(at 100% 100%, rgba(236, 72, 153, 0.1) 0px, transparent 50%),
-                radial-gradient(at 0% 100%, rgba(34, 197, 94, 0.1) 0px, transparent 50%);
-            filter: blur(40px);
-            opacity: 0.8;
-        }
-
-        .dark .mesh-bg {
-            background-color: #050505;
-            background-image:
-                radial-gradient(at 0% 0%, rgba(184, 134, 28, 0.1) 0px, transparent 50%),
-                radial-gradient(at 100% 0%, rgba(99, 102, 241, 0.05) 0px, transparent 50%),
-                radial-gradient(at 100% 100%, rgba(236, 72, 153, 0.05) 0px, transparent 50%),
-                radial-gradient(at 0% 100%, rgba(34, 197, 94, 0.05) 0px, transparent 50%);
-        }
-
-        @keyframes fadeScale {
-            0% {
-                opacity: 0;
                 transform: scale(0.98) translateY(10px);
-            }
+        }
 
-            100% {
-                opacity: 1;
-                transform: scale(1) translateY(0);
-            }
+        100% {
+            opacity: 1;
+            transform: scale(1) translateY(0);
+        }
         }
 
         .animate-enter {
@@ -247,7 +229,8 @@
             <div class="mb-6">
                 <div
                     class="w-16 h-16 bg-red-50 dark:bg-red-900/20 text-red-500 rounded-2xl flex items-center justify-center mb-4 mx-auto shadow-lg shadow-red-500/10">
-                    <i data-lucide="alert-triangle" class="w-8 h-8"></i></div>
+                    <i data-lucide="alert-triangle" class="w-8 h-8"></i>
+                </div>
                 <h3 class="text-xl font-bold text-center text-slate-900 dark:text-white mb-2 font-display"
                     id="confirmTitle">ยืนยันการลบ?</h3>
                 <p class="text-sm text-center text-gray-500 dark:text-gray-400" id="confirmMessage">
@@ -267,7 +250,8 @@
             <div class="flex items-center gap-6">
                 <div
                     class="bg-gradient-to-br from-gold-400 to-gold-600 p-4 rounded-2xl text-white shadow-glow animate-enter">
-                    <i data-lucide="crown" class="w-8 h-8"></i></div>
+                    <i data-lucide="crown" class="w-8 h-8"></i>
+                </div>
                 <div>
                     <h1
                         class="text-3xl md:text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-slate-900 to-slate-700 dark:from-white dark:to-gray-400 tracking-tight font-display mb-1">
