--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no">
     <title>Tracker - Aurora Edition</title>
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -107,26 +108,28 @@
             --glass-border: rgba(255, 255, 255, 0.08);
         }
 
+        html {
+            background-color: #0f172a;
+            /* Match theme color */
+        }
+
         body {
             font-family: 'Sarabun', sans-serif;
-            background-color: hsl(var(--background));
-            overflow-x: hidden;
-            transition: background-color 0.5s ease;
+            -webkit-tap-highlight-color: transparent;
+            -webkit-text-size-adjust: 100%;
+            padding-top: env(safe-area-inset-top);
+            padding-bottom: env(safe-area-inset-bottom);
+            padding-left: env(safe-area-inset-left);
+            padding-right: env(safe-area-inset-right);
         }
 
         /* Aurora Background */
         .aurora-bg {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background:
-                radial-gradient(circle at 0% 0%, rgba(127, 140, 255, 0.15), transparent 50%),
-                radial-gradient(circle at 100% 0%, rgba(169, 124, 255, 0.15), transparent 50%),
-                radial-gradient(circle at 100% 100%, rgba(255, 207, 106, 0.1), transparent 50%),
-                radial-gradient(circle at 0% 100%, rgba(76, 211, 149, 0.05), transparent 50%);
+            background-color: #0f172a;
+            background-image:
+                radial-gradient(at 0% 0%, hsla(253, 16%, 7%, 1) 0, transparent 50%),
+                radial-gradient(at 50% 0%, hsla(225, 39%, 30%, 1) 0, transparent 50%),
+                radial-gradient(at 100% 0%, hsla(339, 49%, 30%, 1) 0, transparent 50%);
             filter: blur(40px);
             animation: auroraMove 20s infinite alternate;
         }
