--- a/index.html
+++ b/index.html
@@ -108,14 +108,11 @@
             --glass-border: rgba(255, 255, 255, 0.08);
         }
 
-        html {
-            background-color: #0f172a;
-            /* Match theme color */
-        }
-
         body {
             font-family: 'Sarabun', sans-serif;
-            -webkit-tap-highlight-color: transparent;
+            background-color: hsl(var(--background));
+            overflow-x: hidden;
+            transition: background-color 0.5s ease;
             -webkit-text-size-adjust: 100%;
             padding-top: env(safe-area-inset-top);
             padding-bottom: env(safe-area-inset-bottom);
@@ -125,11 +122,17 @@
 
         /* Aurora Background */
         .aurora-bg {
-            background-color: #0f172a;
-            background-image:
-                radial-gradient(at 0% 0%, hsla(253, 16%, 7%, 1) 0, transparent 50%),
-                radial-gradient(at 50% 0%, hsla(225, 39%, 30%, 1) 0, transparent 50%),
-                radial-gradient(at 100% 0%, hsla(339, 49%, 30%, 1) 0, transparent 50%);
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background:
+                radial-gradient(circle at 0% 0%, rgba(127, 140, 255, 0.15), transparent 50%),
+                radial-gradient(circle at 100% 0%, rgba(169, 124, 255, 0.15), transparent 50%),
+                radial-gradient(circle at 100% 100%, rgba(255, 207, 106, 0.1), transparent 50%),
+                radial-gradient(circle at 0% 100%, rgba(76, 211, 149, 0.05), transparent 50%);
             filter: blur(40px);
             animation: auroraMove 20s infinite alternate;
         }
@@ -267,29 +270,26 @@
                 </h1>
             </div>
 
-            <div class="flex items-center gap-2 animate-enter" style="animation-delay: 0.2s;">
+            <div class="flex items-center gap-1 sm:gap-2 animate-enter" style="animation-delay: 0.2s;">
                 <button onclick="toggleFilterPanel()"
-                    class="p-2 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors" title="Filter">
+                    class="p-1.5 sm:p-2 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors"
+                    title="Filter">
                     <i data-lucide="filter" class="w-5 h-5 text-muted-foreground"></i>
                 </button>
                 <button onclick="openExportModal()"
-                    class="p-2 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors"
+                    class="p-1.5 sm:p-2 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors"
                     title="Export/Import">
                     <i data-lucide="download-cloud" class="w-5 h-5 text-muted-foreground"></i>
                 </button>
-                <div class="h-6 w-px bg-border mx-1"></div>
-                <button onclick="toggleLanguage()"
-                    class="w-9 h-9 rounded-full flex items-center justify-center font-bold text-xs bg-black/5 dark:bg-white/10 hover:bg-primary hover:text-white transition-all">
-                    <span id="lang-display">TH</span>
-                </button>
+                <div class="h-6 w-px bg-border mx-0.5 sm:mx-1"></div>
                 <button id="themeToggle"
-                    class="p-2 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
+                    class="p-1.5 sm:p-2 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
                     <i data-lucide="moon" class="w-5 h-5"></i>
                 </button>
                 <button onclick="openManageModal()"
-                    class="ml-2 px-4 py-2 rounded-full bg-primary text-white font-medium text-sm shadow-glow hover:shadow-glow-lg hover:-translate-y-0.5 transition-all flex items-center gap-2">
+                    class="ml-1 sm:ml-2 p-2 sm:px-4 sm:py-2 rounded-full bg-primary text-white font-medium text-sm shadow-glow hover:shadow-glow-lg hover:-translate-y-0.5 transition-all flex items-center gap-2">
                     <i data-lucide="settings-2" class="w-4 h-4"></i>
-                    <span data-i18n="manage">Manage</span>
+                    <span class="hidden sm:inline" data-i18n="manage">Manage</span>
                 </button>
             </div>
         </div>
@@ -838,6 +838,20 @@
                 document.getElementById('emptyState').classList.remove('flex');
             }
 
+            const gradients = [
+                'from-red-500 to-orange-500', 'from-orange-500 to-amber-500', 'from-amber-500 to-yellow-500',
+                'from-yellow-500 to-lime-500', 'from-lime-500 to-green-500', 'from-green-500 to-emerald-500',
+                'from-emerald-500 to-teal-500', 'from-teal-500 to-cyan-500', 'from-cyan-500 to-sky-500',
+                'from-sky-500 to-blue-500', 'from-blue-500 to-indigo-500', 'from-indigo-500 to-violet-500',
+                'from-violet-500 to-purple-500', 'from-purple-500 to-fuchsia-500', 'from-fuchsia-500 to-pink-500',
+                'from-pink-500 to-rose-500'
+            ];
+            const getGradient = (name) => {
+                let hash = 0;
+                for (let i = 0; i < name.length; i++) hash = name.charCodeAt(i) + ((hash << 5) - hash);
+                return gradients[Math.abs(hash) % gradients.length];
+            };
+
             container.innerHTML = students.map((student, index) => {
                 const missingCount = student.missing.filter(m => subject.assignments.some(a => a.id === m)).length;
                 const total = subject.assignments.length;
@@ -849,7 +863,7 @@
                     <div class="glass-card rounded-xl p-4 flex items-center justify-between gap-4 group animate-enter ${isSelected ? 'ring-2 ring-primary bg-primary/5' : ''}" style="animation-delay: ${index * 0.05}s">
                         <div class="flex items-center gap-4 flex-1 min-w-0">
                             <div class="relative">
-                                <div class="w-10 h-10 rounded-full bg-gradient-to-br from-gray-100 to-gray-200 dark:from-gray-800 dark:to-gray-900 flex items-center justify-center text-sm font-bold text-muted-foreground shadow-inner transition-opacity ${isSelected ? 'opacity-0' : 'opacity-100'}">
+                                <div class="w-10 h-10 rounded-full bg-gradient-to-br ${getGradient(student.name)} flex items-center justify-center text-sm font-bold text-white shadow-inner transition-opacity ${isSelected ? 'opacity-0' : 'opacity-100'}">
                                     ${student.name.charAt(0)}
                                 </div>
                                 <div class="absolute inset-0 flex items-center justify-center transition-opacity ${isSelected ? 'opacity-100' : 'opacity-0'}">
